# osc-interface

./: FAQ.md  README.md  osc-interface.h
examples/: osc-host.cpp  osc-plugin.cpp
include/: CMakeLists.txt
include/spa/: audio.h  audio_fwd.h  spa.h  spa_fwd.h
src/: CMakeLists.txt
